--- a/.github/workflows/github.yml
+++ b/.github/workflows/github.yml
@@ -11,6 +11,6 @@ jobs:
     - uses: superbrothers/close-pull-request@v2
       with:
         # Optional. Post a issue comment just before closing a pull request.
-        comment: "We do not accept PRs. If you have any questions, please feel free to contact us."
+        comment: "This repo does not accept PRs. The code in this repository is provided as-is, and questions related to this repo will not be supported. If you have a general question for Silicon Labs, visit www.silabs.com/support for assistance."
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
